# Lattice

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_STYLE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  TODO.md  docker-compose.yml  pyproject.toml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
assets/diagrams/: 01-hero-hybrid-search.excalidraw.json  02-context-window-problem.excalidraw.json  03-lattice-instant-knowledge.excalidraw.json  04-indexing-pipeline.excalidraw.json  05-query-pipeline.excalidraw.json  06-multi-hop-reasoning.excalidraw.json  07-graph-schema.excalidraw.json  08-architecture-stack.excalidraw.json  09-documentation-intelligence.excalidraw.json  10-agent-guidance.excalidraw.json  11-hybrid-ranking.excalidraw.json  12-agentic-drift-detection.excalidraw.json  all-diagrams-combined.excalidraw.json
migrations/: 001_create_metadata_tables.sql  002_create_document_tables.sql
src/code_rag/graph/: builder.py
src/code_rag/parsing/call_resolution/: processor.py
src/code_rag/parsing/type_inference/: engine.py
src/code_rag/pipeline/: watcher.py
src/code_rag/query/: engine.py  query_planner.py  responder.py
src/code_rag/summarization/: prompts.py  summarizer.py
src/lattice/: __init__.py  main.py
src/lattice/cli/: __init__.py  bootstrap.py  parser.py
src/lattice/cli/commands/: docs.py  index.py  metadata.py  projects.py  query.py  status.py
src/lattice/config/: __init__.py
src/lattice/core/: __init__.py  cache.py
src/lattice/database/: __init__.py  postgres.py
src/lattice/documents/: __init__.py  api.py  chunk_repository.py  chunker.py  drift_detector.py  drift_repository.py  factory.py  indexer.py  link_finder.py  link_repository.py  models.py  reference_extractor.py  repository.py  scanner.py  service.py
src/lattice/documents/operations/: __init__.py  drift.py  index.py  link.py  search.py
src/lattice/embeddings/: __init__.py  chunker.py  client.py  embedder.py  indexer.py
src/lattice/graph/: __init__.py  batch_builder.py  builder.py  client.py  queries.py  schema.py  statistics.py
src/lattice/indexing/: __init__.py  api.py  context.py  factory.py  handlers.py  orchestrator.py  progress.py  stages.py  watcher.py
src/lattice/indexing/stages/: __init__.py  base.py  embed.py  graph.py  metadata.py  parse.py  scan.py  summarize.py
src/lattice/infrastructure/: __init__.py  api.py
src/lattice/infrastructure/llm/: __init__.py  anthropic_provider.py  api.py  base.py  factory.py  google_provider.py  ollama_provider.py  openai_provider.py  unixcoder_provider.py
src/lattice/infrastructure/memgraph/: __init__.py  batch_builder.py  batch_operations.py  buffers.py  builder.py  client.py  entity_builder.py  schema.py  (+2 more)
src/lattice/mcp/: __init__.py  server.py  tools.py
src/lattice/metadata/: __init__.py  agent_runner.py  api.py  generator.py  models.py  parsers.py  progress.py  prompts.py  repository.py
src/lattice/parsing/: __init__.py  api.py  import_processor.py  inheritance_tracker.py  language_config.py  models.py  parser.py  scanner.py
src/lattice/pipeline/: __init__.py  orchestrator.py  progress.py  stages.py  watcher.py
src/lattice/projects/: __init__.py  api.py  cleanup.py  manager.py  models.py  repository.py
src/lattice/prompts/: __init__.py  documents.yaml  loader.py  metadata.yaml  query.yaml  summarization.yaml
src/lattice/providers/: __init__.py  anthropic_provider.py  factory.py  google_provider.py  ollama_provider.py  openai_provider.py  unixcoder_provider.py
src/lattice/query/: __init__.py  engine.py  graph_search.py  query_planner.py  reranker.py  responder.py  vector_search.py
src/lattice/querying/: __init__.py  api.py  engine.py  factory.py  graph_search.py  models.py  query_planner.py  reranker.py  responder.py  response_builder.py  search_coordinator.py  statistics.py  vector_search.py
src/lattice/shared/: __init__.py  api.py  cache.py  protocols.py  types.py
src/lattice/summarization/: __init__.py  api.py  summarizer.py
tests/: conftest.py  test_call_processor.py  test_config.py  test_database.py  test_document_indexer.py  test_documents.py  test_drift_detector.py  test_embeddings.py  test_extractors.py  test_graph.py  test_import_processor.py  test_inheritance_tracker.py  test_metadata_generator.py  test_metadata_models.py  test_parsing.py  test_pipeline.py  test_reference_extractor.py  test_summarization.py
tests/fixtures/sample_docs/: architecture.md  authentication.md  caching.md  data_pipeline.md  event_system.md  payments.md
(+135 files in other folders)
