[project]
name = "lattice"
version = "0.1.0"
description = "Graph-powered code intelligence - hybrid RAG with graph and vector search"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "tree-sitter-language-pack>=0.7.1",
    "openai>=1.0.0",
    "qdrant-client>=1.12.0",
    "neo4j>=5.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "tiktoken>=0.8.0",
    "tenacity>=9.0.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
    "httpx>=0.28.0",
    "rapidfuzz>=3.5.0",
    "asyncpg>=0.29.0",
    "claude-agent-sdk>=0.1.0",
    "langchain-text-splitters>=0.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "types-PyYAML>=6.0.0",
]

[project.scripts]
lattice = "lattice.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lattice"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_optional = true
strict_equality = true
extra_checks = true

[[tool.mypy.overrides]]
module = [
    "asyncpg.*",
    "neo4j.*",
    "watchdog.*",
    "torch.*",
    "transformers.*",
    "anthropic.*",
    "google.*",
    "numpy.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "lattice.parsing.extractors.*",
    "lattice.infrastructure.llm.unixcoder_provider",
    "lattice.infrastructure.llm.factory",
    "lattice.infrastructure.postgres.postgres",
    "lattice.infrastructure.memgraph.client",
    "lattice.infrastructure.memgraph.batch_builder",
    "lattice.infrastructure.memgraph.builder",
    "lattice.infrastructure.qdrant.client",
    "lattice.infrastructure.qdrant.chunker",
    "lattice.prompts.loader",
    "lattice.shared.config.misc_config",
    "lattice.parsing.type_inference.resolvers",
    "lattice.parsing.call_resolution.resolvers.chained",
    "lattice.documents.drift_detector",
    "lattice.documents.reference_extractor",
    "lattice.indexing.progress",
    "lattice.indexing.watcher",
    "lattice.indexing.handlers",
    "lattice.indexing.stages.*",
    "lattice.indexing.orchestrator",
    "lattice.querying.graph_reasoning.context_builder",
    "lattice.querying.search_coordinator",
    "lattice.querying.graph_search",
    "lattice.querying.engine",
    "lattice.querying.context.builder",
    "lattice.metadata.agent_runner",
    "lattice.documents.operations.*",
    "lattice.documents.service",
    "lattice.documents.factory",
    "lattice.projects.manager",
    "lattice.mcp.server",
    "lattice.infrastructure.llm.openai_provider",
    "lattice.infrastructure.llm.ollama_provider",
    "lattice.parsing.parser",
    "lattice.cli.commands.docs.show",
    "lattice.querying.factory",
    "lattice.indexing.factory",
]
disallow_untyped_defs = false
disable_error_code = ["no-any-return", "misc", "union-attr", "arg-type", "attr-defined", "return-value", "assignment", "call-arg", "valid-type", "var-annotated", "index"]
